# cmake_demo_prj

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  demo.cmake  example.lsl  main.c  tc366_debug.code-workspace  tc366_debug.xgrf  tc366_debug.xjrf  tc366_debug.xqrf  tc_arch.lsl
debug/: demo.mdf
src/: CMakeLists.txt  main.h
src/cpu/: CMakeLists.txt  cpu.c  cpu.h
src/cstart/: CMakeLists.txt  cstart.c  cstart.h
src/itest/: test.c  test.h
